--- a/style.css
+++ b/style.css
@@ -247,3 +247,14 @@ header button {
   font-size: 1em;
   color: #e0e0e0;
 }
+
+.itchio-logo {
+  width: 120px;
+  height: auto;
+}
+
+.godot-logo {
+  width: 120px;
+  height: auto;
+}
+
