--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ header h2 {
   background-color: #100a52;
   color: white;
   font-size: 27px;
+  border: 3px dotted #87CEEB;
+  border-radius: 15px;
+  margin: 2em;
 }
 
 #info img {
@@ -87,6 +90,10 @@ header h2 {
   align-items: center;
   gap: 2em;
   margin: 1em 0;
+  border: 2px dotted #87CEEB;
+  border-radius: 10px;
+  padding: 1.5em;
+  background-color: #1e3a8a;
 }
 
 .step-content {
@@ -108,6 +115,10 @@ header h2 {
   align-items: center;
   gap: 2em;
   margin: 1em 0;
+  border: 2px dotted #87CEEB;
+  border-radius: 10px;
+  padding: 1.5em;
+  background-color: #1e3a8a;
 }
 
 a {
