--- a/style.css
+++ b/style.css
@@ -18,12 +18,6 @@ header {
   align-items: center;
 }
 
-body:has(header h1:only-child) header,
-header:has(h1:only-child) {
-  min-height: 60vh;
-  padding: 2em 0;
-}
-
 .short-header {
   min-height: 60vh;
   padding: 2em 0;
@@ -69,12 +63,9 @@ header h2 {
 
 #info {
   text-align: left;
-  padding: 1em 4em;
-  background-color: #100a52;
+  padding: 1em 4em;  background-color: #100a52;
   color: white;
   font-size: 27px;
-  border: 3px dotted #87CEEB;
-  border-radius: 15px;
   margin: 2em;
 }
 
@@ -306,143 +297,96 @@ footer p {
   opacity: 0.9;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   body {
-    font-size: 30px;
+    font-size: 6vw;
     text-align: center;
-    font-weight: bold;
+    margin: 0;
+    padding: 0;
   }
-  header, #info, #end, footer, .gallery-card, .step-content, .step-image, h1, h2, h3, p, button, a {
-    text-align: center !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    font-weight: bold !important;
+  header {
+    align-items: center;
+    justify-content: center;
+    padding: 0 0.5em;
+    min-height: 80vh;
+    width: 100vw;
+    box-sizing: border-box;
   }
-  .step-container,
-  .step-container-reverse {
+  header h1 {
+    font-size: 13vw;
+  }
+  header p, header h2 {
+    font-size: 6vw;
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  #info {
+    padding: 1em 0.2em;
+    font-size: 5vw;
+    margin: 1em 0.2em;
+    text-align: center;
+    width: 100vw;
+    box-sizing: border-box;
+  }
+  .step-container, .step-container-reverse {
     flex-direction: column !important;
-    align-items: center !important;
-    gap: 2em !important;
-    text-align: center !important;
+    align-items: center;
+    gap: 1.5em;
+    padding: 2em 0.5em;
+    text-align: center;
+    width: 96vw;
+    margin: 1em auto;
+    box-sizing: border-box;
   }
   .step-content, .step-image {
-    width: 100% !important;
-    max-width: 100% !important;
-    margin: 0 auto !important;
-    padding: 0 !important;
-  }
-  .step-image img {
-    display: block;
-    margin: 0 auto 1em auto;
-    max-width: 90vw;
-    height: auto;
-  }
-  button {
-    display: block;
-    width: 90vw;
-    max-width: 350px;
-    font-size: 2em !important;
-    font-weight: bold !important;
-    margin: 1.5em auto !important;
-    padding: 1.2em 0 !important;
-  }
-  h1, h2, h3, p, a {
-    font-size: 2.2em !important;
-    font-weight: bold !important;
-    line-height: 1.3 !important;
-  }
-  .gallery-scroll {
-    flex-direction: column !important;
-    gap: 2em !important;
-    align-items: center !important;
-  }
-  .gallery-card {
-    width: 90vw !important;
-    max-width: 400px !important;
-    margin: 0 auto 2em auto !important;
-    font-size: 1.5em !important;
-  }
-}
-
-@media (max-width: 480px) {
-  body {
-    font-size: 34px;
+    width: 100%;
     text-align: center;
-    font-weight: bold;
-  }
-  header, #info, #end, footer, .gallery-card, .step-content, .step-image, h1, h2, h3, p, button, a {
-    text-align: center !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    font-weight: bold !important;
-  }
-  .step-container,
-  .step-container-reverse {
-    flex-direction: column !important;
-    align-items: center !important;
-    gap: 2em !important;
-    text-align: center !important;
-  }
-  .step-content, .step-image {
-    width: 100% !important;
-    max-width: 100% !important;
-    margin: 0 auto !important;
-    padding: 0 !important;
   }
   .step-image img {
-    display: block;
-    margin: 0 auto 1em auto;
-    max-width: 95vw;
-    height: auto;
-  }
-  button {
-    display: block;
-    width: 95vw;
-    max-width: 350px;
-    font-size: 2.2em !important;
-    font-weight: bold !important;
-    margin: 2em auto !important;
-    padding: 1.5em 0 !important;
-  }
-  h1, h2, h3, p, a {
-    font-size: 2.5em !important;
-    font-weight: bold !important;
-    line-height: 1.3 !important;
-  }
-  .gallery-scroll {
-    flex-direction: column !important;
-    gap: 2em !important;
-    align-items: center !important;
-  }
-  .gallery-card {
-    width: 95vw !important;
-    max-width: 400px !important;
-    margin: 0 auto 2em auto !important;
-    font-size: 1.7em !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .step-content {
-    margin-bottom: 1em;
-  }
-  
-  .step-image {
+    max-width: 60vw;
     margin: 0 auto;
   }
-  
-  button, a {
-    min-height: 44px;
-    min-width: 44px;
+  .gallery-scroll {
+    gap: 1.5em;
+    padding: 1em 0;
+    width: 100vw;
+    box-sizing: border-box;
   }
-  
-  p, h1, h2, h3 {
-    line-height: 1.4;
+  .gallery-card {
+    flex: 0 0 92vw;
+    padding: 1em;
+    font-size: 5vw;
+    margin: 0 auto;
+    box-sizing: border-box;
   }
-
-  img {
-    max-width: 100%;
+  .gallery-card img {
+    height: 40vw;
+  }
+  #end h1 {
+    font-size: 10vw;
+  }
+  #end p {
+    font-size: 6vw;
+  }
+  button {
+    font-size: 6vw;
+    padding: 1em 2em;
+    width: 80vw;
+    max-width: 350px;
+    margin: 1.5em auto;
+    display: block;
+  }
+  h2, h3 {
+    font-size: 7vw !important;
+  }
+  .rounded-glow {
+    max-width: 90vw;
+    max-height: 40vh;
     height: auto;
+    width: auto;
+    display: block;
+    margin: 2em auto;
   }
 }
 
